src/components/VideoCard/index.module.less
@z: 3;

.bili-video-card {
  position: relative;
}

.preview-card-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: @z + 1;
  overflow: hidden;

  // 配合进度条, 底部不需要圆角
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;

  .preview-card-inner {
    width: 100%;
    height: 100%;
  }
}

.watch-later {
  z-index: @z + 2;
}

.badge {
  color: #fa6a9d;
  border-radius: 2px;
  border: 1px #fa6a9d solid;
  line-height: 20px;
  padding: 0 10px;
  transform: scale(0.8);
  transform-origin: center left;
}

.recommend-reason {
  // color: #fa6a9d;
  // border-radius: 2px;
  // border: 1px #fa6a9d solid;
  // line-height: 20px;
  // padding: 0 10px;
  // transform: scale(0.8);

  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
  color: var(--Or5);
  background-color: var(--Or1);
  border-radius: 4px;
  margin-right: 4px;
  font-size: var(--follow-icon-font-size);
  line-height: var(--follow-icon-line-height);
  height: var(--follow-icon-line-height);
  padding: 0 4px;
  cursor: default;
}

.bangumi-desc {
  color: default;
}

.btn-dislike {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 8px;
  left: 8px;
  width: 28px;
  height: 28px;
  border-radius: 6px;
  cursor: pointer;
  background-color: rgba(33, 33, 33, 0.8);
  z-index: 9;
  transform: translateZ(0);

  .btn-dislike-icon {
    pointer-events: none;
    user-select: none;
    width: 12px;
    height: 12px;
    color: #fff;
  }

  .btn-dislike-tip {
    pointer-events: none;
    user-select: none;
    position: absolute;
    bottom: -6px;
    left: -5px;
    transform: translateY(100%);
    font-size: 12px;
    color: #fff;
    border-radius: 4px;
    line-height: 18px;
    padding: 4px 8px;
    background-color: rgba(0, 0, 0, 0.8);
    white-space: nowrap;
  }
}

.disliked-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  display: flex;
  flex-direction: column;

  border-radius: var(--video-card-border-radius);
  border: 1px solid #eee;
  :global(body.dark) & {
    border: 1px solid #333;
  }

  .dislike-content-cover {
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    // https://stackoverflow.com/questions/17621181/how-is-padding-top-as-a-percentage-related-to-the-parents-width
    // 基于 width * 百分比
    padding-top: 56.25%;
    position: relative;

    .dislike-content-cover-inner {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;

      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;

      .dislike-icon {
        margin-bottom: 5px;
      }

      .dislike-reason {
        font-size: 20px;
        text-align: center;
      }

      .dislike-desc {
        font-size: 16px;
        text-align: center;
      }
    }
  }

  .dislike-content-action {
    flex: 1;
    width: 100%;

    border-top: 1px solid #eee;
    :global(body.dark) & {
      border-top: 1px solid #333;
    }

    display: flex;
    align-items: center;
    justify-content: center;

    button {
      font-size: 16px;
      color: inherit;
      display: flex;
      align-items: center;
    }
  }
}

.skeleton-active {
  :global(.bili-video-card__skeleton--cover),
  :global(.bili-video-card__skeleton--text),
  :global(.bili-video-card__skeleton--light),
  :global(.bili-video-card__skeleton--avatar) {
    background: linear-gradient(
      135deg,
      rgba(0, 0, 0, 0.06) 25%,
      rgba(0, 0, 0, 0.15) 37%,
      rgba(0, 0, 0, 0.06) 63%
    );
    background-size: 400% 100%;
    animation-name: ant-skeleton-loading;
    animation-duration: 2.165s;
    animation-timing-function: ease;
    animation-iteration-count: infinite;
  }
}

@keyframes ant-skeleton-loading {
  0% {
    background-position: 100% 50%;
  }

  // https://css-tricks.com/css-keyframe-animation-delay-iterations/
  // raw animation-duration: 1.4s; / 0.618 = 2.165s
  61.8%,
  100% {
    background-position: 0 50%;
  }
}

